# engramdb

./: .build-env  .gitignore  Cargo.toml  README.md  deny.toml  engramdb-spec.md  plan.md  plugin.json
.cargo/: config.toml
.claude/: CLAUDE.md
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/handoffs/: brisk-quantizing-otter.md  depth-decaying-scope.md  lucid-merging-falcon.md
.config/: nextest.toml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  release.yml
benches/: benchmarks.rs  daemon_lifecycle.rs  helpers.rs
benches/memory-search-benchmark/: .gitignore  COMPARISON.md  README.md  RESULTS.md  bench.py  gen_data.py  report.py  results-highiter.json  results-highiter.md  results-large.json  results-large.md  results-save-highiter.json  results-save-highiter.md  results-save-large.json  results-save-large.md  results.json  run_all.sh
commands/: reflect.md
crates/engram-cli/: Cargo.toml  build.rs
crates/engram-cli/src/: app.rs  engine.rs  lib.rs  main.rs  output.rs  project_tree.rs  validation.rs
crates/engram-cli/src/commands/: add.rs  challenge.rs  completions.rs  compress.rs  config.rs  daemon.rs  delete.rs  doctor.rs  gc.rs  get.rs  groups.rs  hook.rs  init.rs  list.rs  migrate.rs  mod.rs  projects.rs  query.rs  reindex.rs  review.rs  rollback.rs  serve.rs  setup.rs  stats.rs  task.rs  update.rs  verify.rs
crates/engram-cli/tests/: title_integration.rs
crates/engram-cli/tests/cli/: add_get.rs  completions.rs  compress.rs  doctor.rs  error_cases.rs  gc.rs  hook.rs  init.rs  list.rs  main.rs  output_renderers.rs  projects.rs  stats.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: error.rs  lib.rs  server.rs  server_tests.rs
crates/engram-models/: Cargo.toml
crates/engram-models/src/: lib.rs  rerank.rs
crates/engram-models/src/embeddings/: chunking.rs  mod.rs  ollama.rs  onnx.rs  pool.rs  tract.rs
crates/engram-models/src/nli/: challenge.rs  mod.rs  onnx.rs
crates/engram-models/src/title/: keyword.rs  mod.rs  t5.rs
crates/engram-onnx/: Cargo.toml
crates/engram-onnx/src/: lib.rs
crates/engram-storage/: Cargo.toml
crates/engram-storage/src/: config.rs  error.rs  lance_index.rs  lib.rs  manifest.rs  paths.rs  project_id.rs  registry.rs  store.rs  task_state.rs  test_support.rs  worktree.rs  write_lock.rs
crates/engram-storage/src/memory_file/: helpers.rs  mod.rs  tests.rs  v1.rs  v2.rs
crates/engram-storage/src/telemetry/: collector.rs  mod.rs  persistence.rs
crates/engram-test-support/: Cargo.toml
crates/engram-test-support/src/: lib.rs
crates/engram-types/: Cargo.toml
crates/engram-types/src/: challenge.rs  config.rs  env.rs  epistemic.rs  lib.rs  memory.rs  project_list_grouping.rs  title_strategy.rs
docs/: README.md  release-notes-epistemic.md  review-remediation.md
docs/agents/: README.md  best-practices.md  mcp-tools.md  memory-model.md  query-modes.md  workflows.md
docs/contributors/: README.md  architecture.md  code-organization.md  embedding-analysis.md  extending.md  testing.md
docs/plans/: 2026-04-17-unify-search-retrieve-into-query.md  2026-07-07-tract-pure-rust-fallback-backend.md  2026-07-09-r2-r3-schema-migration.md  2026-07-19-epistemic-memory-classes.md  2026-07-19-epistemic-memory-implementation-plan.md  2026-07-19-epistemic-memory-spec.md  2026-07-19-epistemic-memory-test-plan.md  2026-07-20-multi-project-memories.md  golden_full.md  golden_sample.md
docs/superpowers/plans/: 2026-06-03-daemon-lifecycle.md
docs/superpowers/specs/: 2026-03-17-cross-project-memory-access-design.md  2026-05-15-session-end-reflection-nudge-design.md  2026-06-03-daemon-lifecycle-design.md
docs/users/: README.md  claude-code.md  cli-reference.md  configuration.md  daemon.md  embeddings.md  installation.md  projects-and-worktrees.md  quickstart.md  troubleshooting.md
examples/: embed_matrix.rs  embed_quality.rs  nli_quality.rs  onnx_bench.rs  t5_compare.rs  timing_create.rs
examples/data/: embed_eval.json  embed_eval_notes.md  embed_matrix_results.json
experiments/tract-vs-ort/: Cargo.toml  README.md
experiments/tract-vs-ort/src/: main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/memory_file/: v1_basic.md  v2_escaped.md
fuzz/corpus/memory_file_roundtrip/: v2_basic.md
fuzz/corpus/registry/: basic.json  cycle.json
fuzz/fuzz_targets/: composite_score.rs  decay.rs  memory_file.rs  memory_file_roundtrip.rs  registry.rs  scope_logical.rs  scope_physical.rs  scope_proximity.rs  slug.rs
plans/: 01-mandatory-summary.md  02-reranking.md  03-nli-contradiction.md
src/: lib.rs  main.rs  onnx_ep.rs
src/cli/: app.rs  mod.rs  output.rs  prompter.rs  validation.rs
src/cli/commands/: add.rs  daemon.rs  (+23 more)
src/daemon/: client.rs  doctor.rs  metrics.rs  mod.rs  protocol.rs  remote.rs  resolve.rs  server.rs  tests.rs  transport.rs
src/embeddings/: mod.rs  ollama.rs  onnx.rs
src/mcp/: error.rs  server.rs
src/nli/: challenge.rs  mod.rs  onnx.rs
src/ops/: challenge.rs  compress.rs  config.rs  create.rs  daemon_resolve.rs  delete.rs  doctor.rs  gc.rs  get.rs  list.rs  maintenance.rs  mod.rs  parsing.rs  projects.rs  query.rs  reindex.rs  resolve.rs  retrieve.rs  review.rs  search.rs  stats.rs  task.rs  update.rs  verify.rs
src/retrieval/: engine.rs  filters.rs  mod.rs  reranker.rs
src/scope/: logical.rs  mod.rs  physical.rs
src/scoring/: composite.rs  decay.rs  mod.rs  trust.rs
src/search/: keyword.rs  mod.rs
src/storage/: config.rs  error.rs  index.rs  lance_index.rs  manifest.rs  memory_file.rs  mod.rs  paths.rs  project_id.rs  registry.rs  store.rs  test_support.rs  worktree.rs  write_lock.rs
src/telemetry/: collector.rs  mod.rs  persistence.rs
src/title/: keyword.rs  mod.rs  pool.rs  t5.rs
src/types/: challenge.rs  config.rs  decay.rs  memory.rs  mod.rs  provenance.rs
src/vector/: lancedb.rs  mod.rs
tests/: title_integration.rs
tests/cli/: add_get.rs  challenge.rs  compress.rs  delete.rs  doctor.rs  gc.rs  global_flags.rs  helpers.rs  init.rs  list.rs  main.rs  output_renderers.rs  projects.rs  query.rs  reindex.rs  retrieve.rs  search.rs  stats.rs  update.rs
(+5 files in other folders)
