[workspace]
members = ["crates/*"]
# Treat the workspace as a whole: bare root commands (`cargo build`, `test`,
# `clippy`, `run`) act on every member, matching the `--workspace`-everywhere
# convention and letting `cargo build --bin engramdb` resolve the binary (which
# lives in `engram-cli`) without `-p`. Hand-pick a single crate with `-p` when
# you want a faster, narrower build.
default-members = [".", "crates/*"]

# Single source of truth for the workspace version. Every crate sets
# `version.workspace = true`, so a release bump is a one-line change here.
[workspace.package]
version = "0.7.0"

[package]
name = "engramdb"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Project-scoped persistent memory for coding agents"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engramdb"
path = "src/lib.rs"

[features]
default = ["ollama"]
ollama = ["reqwest", "engram-models/ollama"]
# Apple Core ML (GPU / Neural Engine) acceleration for all ONNX models.
# Enable on macOS only: `cargo build --features coreml`. Off by default so
# the Linux/CI build and prebuilt-binary download are unchanged. Forwarded to
# the model crates, which own the `ort` EP wiring.
coreml = ["engram-onnx/coreml", "engram-models/coreml"]
# XNNPACK portable CPU-kernel EP (per-node MLAS fallback). Off by default;
# the provider ships in the prebuilt `ort` binary so only this feature is
# needed (no source build, same downloaded binary). For A/B benchmarking.
xnnpack = ["engram-onnx/xnnpack", "engram-models/xnnpack"]
# Re-exports `engram-storage`'s `test_support` (global-store serialization lock)
# so downstream crates (engram-mcp, engram-cli) can use it in their test builds.
test-support = ["engram-storage/test-support"]

[dependencies]
# Workspace sub-crates (extracted layers; re-exported from lib.rs so the
# `engramdb::<module>` and `crate::<module>` paths stay stable in the core).
engram-types = { path = "crates/engram-types" }
engram-onnx = { path = "crates/engram-onnx" }
engram-storage = { path = "crates/engram-storage" }
engram-models = { path = "crates/engram-models", default-features = false }

# Vector DB & Embeddings (the core's daemon metrics + reranker selection)
lancedb = { version = "0.26", default-features = false }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
arrow-array = "57"
arrow-schema = "57"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
sha2 = "0.10"
dirs = "6"
jwalk = "0.8"
fs4 = { version = "0.12", features = ["sync"] }
rayon = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Atomic file writes
tempfile = "3"

# Unix-only: safe geteuid() for the daemon's socket-permission hardening and
# SO_PEERCRED peer checks (already in the dependency tree via tempfile et al.).
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
# Enable storage's `test-support` module (global-store serialization lock) for
# this crate's tests; `#[cfg(test)]` items don't cross crate boundaries.
engram-storage = { path = "crates/engram-storage", features = ["test-support"] }
engram-test-support = { path = "crates/engram-test-support" }
ctor = "0.4"
rand = "0.9"
# Criterion benches live in this core crate (`benches/`); they exercise the
# re-exported model/ops/scoring APIs.
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
# The `examples/` are low-level ONNX/model benchmarks that drive `ort` /
# `tokenizers` / `hf-hub` / `fastembed` directly (alongside the re-exported
# engramdb model APIs), so they need those crates at dev time.
# `tls-rustls` pairs with `download-binaries` (the `ort-sys` build script's
# download path needs a TLS provider on `ureq`); see the note in
# `crates/engram-onnx/Cargo.toml`.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "ndarray", "std", "tls-rustls"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "tokio", "ureq"] }
toml = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "daemon_lifecycle"
harness = false

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[profile.bench]
lto = false
opt-level = 2
codegen-units = 16
