[workspace]
members = ["crates/*"]
# Treat the workspace as a whole: bare root commands (`cargo build`, `test`,
# `clippy`, `run`) act on every member, matching the `--workspace`-everywhere
# convention and letting `cargo build --bin engramdb` resolve the binary (which
# lives in `engram-cli`) without `-p`. Hand-pick a single crate with `-p` when
# you want a faster, narrower build.
default-members = [".", "crates/*"]

# Single source of truth for the workspace version. Every crate sets
# `version.workspace = true`, so a release bump is a one-line change here.
[workspace.package]
version = "0.8.0"

[package]
name = "engramdb"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Project-scoped persistent memory for coding agents"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engramdb"
path = "src/lib.rs"

[features]
default = ["onnxruntime", "ollama"]
# ONNX Runtime stack (`ort` + `fastembed` + the `engram-onnx` EP wiring). On by
# default. A pure-Rust build for a platform with no prebuilt ORT (Intel Mac)
# uses `--no-default-features --features tract` instead.
onnxruntime = ["engram-models/onnxruntime", "dep:engram-onnx"]
# Pure-Rust `tract` embedding backend (fp32 MiniLM). No native ONNX Runtime.
tract = ["engram-models/tract"]
ollama = ["reqwest", "engram-models/ollama"]
# Apple Core ML (GPU / Neural Engine) acceleration for all ONNX models.
# Enable on macOS only: `cargo build --features coreml`. Off by default so
# the Linux/CI build and prebuilt-binary download are unchanged. Forwarded to
# the model crates, which own the `ort` EP wiring.
coreml = ["onnxruntime", "engram-onnx/coreml", "engram-models/coreml"]
# XNNPACK portable CPU-kernel EP (per-node MLAS fallback). Off by default;
# the provider ships in the prebuilt `ort` binary so only this feature is
# needed (no source build, same downloaded binary). For A/B benchmarking.
xnnpack = ["onnxruntime", "engram-onnx/xnnpack", "engram-models/xnnpack"]
# Re-exports `engram-storage`'s `test_support` (global-store serialization lock)
# so downstream crates (engram-mcp, engram-cli) can use it in their test builds.
test-support = ["engram-storage/test-support"]

[dependencies]
# Workspace sub-crates (extracted layers; re-exported from lib.rs so the
# `engramdb::<module>` and `crate::<module>` paths stay stable in the core).
engram-types = { path = "crates/engram-types" }
# ONNX Runtime EP wiring, re-exported as `engramdb::onnx_ep`. Optional so a
# pure-`tract` build (Intel Mac) drops ORT entirely. Gated by `onnxruntime`.
engram-onnx = { path = "crates/engram-onnx", optional = true }
engram-storage = { path = "crates/engram-storage" }
engram-models = { path = "crates/engram-models", default-features = false }

# Vector DB (the core's daemon metrics + LanceDB index). The embedding /
# reranker / NLI models all live in the `engram-models` crate, so the core
# no longer depends on `fastembed` directly.
lancedb = { version = "0.30", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
arrow-array = "58"
arrow-schema = "58"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
sha2 = "0.11"
dirs = "6"
jwalk = "0.8"
fs4 = { version = "0.12", features = ["sync"] }
rayon = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Atomic file writes
tempfile = "3"

# Unix-only: safe geteuid() for the daemon's socket-permission hardening and
# SO_PEERCRED peer checks (already in the dependency tree via tempfile et al.).
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
# Enable storage's `test-support` module (global-store serialization lock) for
# this crate's tests; `#[cfg(test)]` items don't cross crate boundaries.
engram-storage = { path = "crates/engram-storage", features = ["test-support"] }
engram-test-support = { path = "crates/engram-test-support" }
ctor = "1"
rand = "0.9"
# Criterion benches live in this core crate (`benches/`); they exercise the
# re-exported model/ops/scoring APIs.
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
# The `examples/` are low-level ONNX/model benchmarks that drive `ort` /
# `tokenizers` / `hf-hub` directly (alongside the re-exported engramdb model
# APIs, which own the `fastembed` embedding/reranker paths), so they need those
# crates at dev time.
# `tls-rustls` pairs with `download-binaries` (the `ort-sys` build script's
# download path needs a TLS provider on `ureq`); see the note in
# `crates/engram-onnx/Cargo.toml`.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "ndarray", "std", "tls-rustls"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "tokio", "ureq"] }
toml = "1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "daemon_lifecycle"
harness = false

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[profile.bench]
lto = false
opt-level = 2
codegen-units = 16
