[package]
name = "engramdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
chrono = "0.4"
serde_json = "1"

[dependencies.engramdb]
path = ".."

# Prevent this crate from interfering with normal `cargo` workspace resolution.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "memory_file"
path = "fuzz_targets/memory_file.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_file_roundtrip"
path = "fuzz_targets/memory_file_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scope_logical"
path = "fuzz_targets/scope_logical.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scope_physical"
path = "fuzz_targets/scope_physical.rs"
test = false
doc = false
bench = false

[[bin]]
name = "composite_score"
path = "fuzz_targets/composite_score.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scope_proximity"
path = "fuzz_targets/scope_proximity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decay"
path = "fuzz_targets/decay.rs"
test = false
doc = false
bench = false

[[bin]]
name = "registry"
path = "fuzz_targets/registry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slug"
path = "fuzz_targets/slug.rs"
test = false
doc = false
bench = false
