[package]
name = "engram-cli"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Command-line interface and `engramdb` binary for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_cli"
path = "src/lib.rs"

# The user-facing binary keeps its historical name (`engramdb`) so release
# artifacts and `cargo install` paths are unchanged after the split.
[[bin]]
name = "engramdb"
path = "src/main.rs"

[features]
default = ["ollama"]
# Forward the model/backend feature flags down to the engramdb core crate.
ollama = ["engramdb/ollama"]
coreml = ["engramdb/coreml"]
xnnpack = ["engramdb/xnnpack"]

[dependencies]
engramdb = { path = "../..", default-features = false }
engram-mcp = { path = "../engram-mcp" }

clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.7"
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.18"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
shell-words = "1"
dirs = "6"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
engramdb = { path = "../..", default-features = false, features = ["test-support"] }
assert_cmd = "2"
predicates = "3"
regex = "1"
tempfile = "3"
