[package]
name = "engram-mcp"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "MCP (Model Context Protocol) server surface for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_mcp"
path = "src/lib.rs"

[dependencies]
engramdb = { path = "../..", default-features = false }

rmcp = { version = "0.15", features = ["macros", "server", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.8", default-features = false, features = ["tokio"] }
schemars = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }

tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
# Round-trips get_prompt / read_resource over the in-process duplex transport;
# and the global-store serialization lock for tests that touch `project: global`.
engramdb = { path = "../..", default-features = false, features = ["test-support"] }
# `arm()`s the per-process data/config-dir isolation (#[ctor] in src/lib.rs) so
# the in-crate global-store tests don't race on the real global dir.
engram-test-support = { path = "../engram-test-support" }
ctor = "0.4"
rmcp = { version = "0.15", features = ["client"] }
tempfile = "3"
toml = "0.8"
