[package]
name = "engram-models"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Embedding / NLI / title ONNX model layer for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_models"
path = "src/lib.rs"

[features]
default = ["ollama"]
# Ollama embedding backend via `reqwest`. Disable for pure offline ONNX.
ollama = ["reqwest"]
# ORT execution-provider flags, forwarded to engram-onnx + ort.
coreml = ["ort/coreml", "engram-onnx/coreml"]
xnnpack = ["ort/xnnpack", "engram-onnx/xnnpack"]

[dependencies]
engram-types = { path = "../engram-types" }
engram-onnx = { path = "../engram-onnx" }
engram-storage = { path = "../engram-storage" }

fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
# `tls-rustls` is needed with `download-binaries` so this crate builds in
# isolation: the `ort-sys` build script's download path calls `ureq`'s
# `tls_config(..)`, which only exists when a TLS feature is on. See the longer
# note in `crates/engram-onnx/Cargo.toml`.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "ndarray", "std", "tls-rustls"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "tokio", "ureq"] }
ndarray = { version = "0.17", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }
async-trait = "0.1"

tracing = "0.1"
anyhow = "1"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
engram-test-support = { path = "../engram-test-support" }
ctor = "1"
