[package]
name = "engram-onnx"
version.workspace = true
edition = "2021"
license = "MIT"
description = "ONNX Runtime execution-provider wiring (Core ML / XNNPACK) for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_onnx"
path = "src/lib.rs"

[features]
# Mirror the workspace EP feature flags; both forward to `ort`. Off by default
# so the Linux/CI build and prebuilt-binary download are unchanged.
coreml = ["ort/coreml"]
xnnpack = ["ort/xnnpack"]

[dependencies]
# `tls-rustls` is required alongside `download-binaries`: the `ort-sys` build
# script always compiles its binary-download path (even under
# `ORT_STRATEGY=system`), and that code calls `ureq`'s `tls_config(..)`, which
# only exists when a TLS feature is enabled on `ort`. `ort`'s *default* features
# would supply `tls-native`, but we set `default-features = false`, so we must
# opt back in explicitly. rustls matches the rest of the workspace
# (fastembed/hf-hub/reqwest all use rustls). Without it, building this crate in
# isolation (`cargo check -p engram-onnx`) fails; the full workspace only
# happened to compile because `fastembed` pulls rustls into `ort` via
# feature unification.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "ndarray", "std", "tls-rustls"] }
