[package]
name = "engram-onnx"
version.workspace = true
edition = "2021"
license = "MIT"
description = "ONNX Runtime execution-provider wiring (Core ML / XNNPACK) for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_onnx"
path = "src/lib.rs"

[features]
# Mirror the workspace EP feature flags; both forward to `ort`. Off by default
# so the Linux/CI build and prebuilt-binary download are unchanged.
coreml = ["ort/coreml"]
xnnpack = ["ort/xnnpack"]

[dependencies]
# `tls-rustls` is required alongside `download-binaries`: the `ort-sys` build
# script always compiles its binary-download path (even under
# `ORT_STRATEGY=system`), and that code calls `ureq`'s `tls_config(..)`, which
# only exists when a TLS feature is enabled on `ort`. `ort`'s *default* features
# would supply `tls-native`, but we set `default-features = false`, so we must
# opt back in explicitly. rustls matches the rest of the workspace
# (fastembed/hf-hub/reqwest all use rustls). Without it, building this crate in
# isolation (`cargo check -p engram-onnx`) fails; the full workspace only
# happened to compile because `fastembed` pulls rustls into `ort` via
# feature unification.
#
# Version is pinned to `2.0.0-rc.12` to match `fastembed`, which requires it
# exactly (`ort = "=2.0.0-rc.12"`). rc.12 targets ONNX Runtime 1.24.x
# (**ABI/API version 24**); a mismatched runtime fails at *startup* with
# "The requested API version [24] is not available, only API versions [1, N]".
# `download-binaries` ships prebuilt ORT 1.24 for Windows, Linux, and
# **aarch64** macOS/iOS — but NOT `x86_64-apple-darwin` (Intel Mac): upstream
# stopped publishing Intel-Mac ORT builds. On Intel Mac the build falls back to
# a *system* libonnxruntime, and Homebrew's is 1.23.x (API 23) → the API-24
# error above. Intel-Mac users must supply an ORT **1.24.x** runtime
# themselves (build from source via `ORT_STRATEGY=compile`, or point
# `ORT_LIB_LOCATION` at a 1.24.x `libonnxruntime` with `ORT_STRATEGY=system`).
# See docs/users/troubleshooting.md.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "ndarray", "std", "tls-rustls"] }
