[package]
name = "engram-storage"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Storage + telemetry layer (MemoryStore, LanceDB index) for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_storage"
path = "src/lib.rs"

[features]
# Exposes `test_support` (the global-store serialization lock) to downstream
# crates' test builds. `#[cfg(test)]` items are not visible across crates, so
# consumers enable this in their `dev-dependencies` instead.
test-support = []

[dependencies]
engram-types = { path = "../engram-types" }

lancedb = { version = "0.26", default-features = false }
arrow-array = "57"
arrow-schema = "57"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"

uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "6"
jwalk = "0.8"
fs4 = { version = "0.12", features = ["sync"] }
shell-words = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "process"] }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"

tracing = "0.1"
thiserror = "2"
anyhow = "1"
tempfile = "3"

[dev-dependencies]
engram-test-support = { path = "../engram-test-support" }
ctor = "0.4"
