[package]
name = "engram-test-support"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Shared test-isolation harness for the EngramDB workspace"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_test_support"
path = "src/lib.rs"

[dependencies]
ctor = "0.4"
tempfile = "3"
