[package]
name = "engram-types"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Core data-model and configuration types for EngramDB"
repository = "https://github.com/egeapak/engramdb"

[lib]
name = "engram_types"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
tracing = "0.1"
